test: Cars class getWinners 메서드 변경에 의한 테스트코드 변경